# magnet-desktop

./: Dockerfile.windows  README.md  build-windows.sh  package.json  pnpm-lock.yaml
src/: App.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/dependency/: core.rs  view.rs
src-tauri/src/api/servers/: core.rs  view.rs
src-tauri/src/utils/: os.rs
src/components/: AppSidebar.tsx  ConfigModal.tsx  Layout.tsx  ServerCard.tsx  Tag.tsx
src/components/ui/: sidebar.tsx
src/pages/discover/: index.tsx
src/pages/my/: index.tsx
src/pages/welcome/: index.tsx
src/types/: server.ts
src/utils/: getRelativeTime.ts  parseDate.ts
